2003-05-25  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* dccsend.c: use more code from libdcc.

	* lib/Makefile.am: rename to libdcc.
	* Makefile.am: adapt to rename.

	* child.c: replace parse_get_line with new parse_reply from
	libdcc.
	* lib/dcc.c: add parse_reply.
	* lib/dcc.h: add parse_reply.

2003-05-22  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* child.c (get_line_from_client): move from here...
	* lib/dcc.c: ... to here
	* lib/dcc.h: new file.

2003-05-14  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* child.c (get_line_from_client): restructure a bit for
	easier generalisation.
	(child_loop): adapt.

	* dccserver.h: only have minimal includes here.
	* child.c: add includes.

	* dccserver.c: add includes.

	* child.c (fdgets, findnl, read_some, tell_client, write_complete): move from here...
	* lib/io.c (fdgets, findnl, read_some, tell_client, write_complete): ... to here.

	* Makefile.am (AM_CPPFLAGS): look for header files in lib/.

	* lib/Makefile.am (libcompat_a_SOURCES): add io.c and util.c.

	* child.c (strip_path): move from here...
	* lib/util.c: ... to here.
	* lib/util.h: new file.

	* child.c (data_available): move from here...
	* lib/io.c: ... to here.
	* lib/io.h: new file.

2003-05-13  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* lib/getaddrinfo.c (getaddrinfo): use unsigned short instead of
	less portable u_short.

	* child.c (display_remote_line): fix signedness warnings from
	Tru64.

	* configure.ac: fix getaddrinfo test for Tru64.

2003-05-12  Thomas Klausner  <wiz@danbala.tuwien.ac.at>

	* README.Darwin: removed, unneeded now.

	* compile: needed for dccsend_CPPFLAGS.

	* configure.ac: use #-comments instead of dnl. Looks nicer.

	* COPYING: add copyright for lib/poll.[ch].

	* configure.ac, Makefile.am, lib/: moved replacement functions to
	lib/ subdir, added poll replacement function from Brian M Clapper
	for building on Darwin.
	
	* dccserver.mdoc: document "close" command.
	* dccserver.man: regen.
