@@ -1,4 +1,4 @@
-.\" $NiH: dccsend.mdoc,v 1.1 2003/04/07 12:11:48 wiz Exp $
+.\" $NiH: dccsend.mdoc,v 1.2 2003/05/14 08:22:41 wiz Exp $
 .\"
 .\" Copyright (c) 2003 Thomas Klausner.
 .\" All rights reserved.
@@ -94,9 +94,5 @@ dccsend -n yournick example.org /path/to/file
 was written by
 .An Thomas Klausner Aq wiz@danbala.tuwien.ac.at .
 .Sh BUGS
-The
-.Fl r
-argument is currently ignored.
-.Pp
 There are no timeouts, just interrupt and try again.
 The protocol supports resuming automatically.
